--- a/style.css
+++ b/style.css
@@ -1,14 +1,37 @@
-#header {
+header {
     margin: 10%;
     font-family: Helvetica, sans-serif;
     font-size: 3.3vw;
-
+    font-weight: bold;
 }
+#pics{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
+img {
+    max-width: 40vw;
+    max-height:40vw;
+    width: auto;
+    height: auto;
+    float: center;
+  }
+
+
+
 
 #statsTable {
+    margin: 20%;
+    width: 90%;
+    border-color: darkgreen;
+    border-width: 2px;
 
 }
 
-#footer {
+td{
+    text-align: center;
+}
+footer {
 
 }
