--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 
-
-
 header {
-    padding: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-family: Helvetica, sans-serif;
     font-size: 3.3vw;
     font-weight: bold;
     text-align: center;
- 
+    background-color: lightgray;
+    border-radius: 10px;
+    padding: 10px;
 }
 #pics{
     display: inline-block;
@@ -16,7 +17,12 @@ header {
     width: 80%;
     margin: auto;
     
-    
+}
+
+#names {
+    font-family:  Helvetica;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 img {
@@ -29,15 +35,21 @@ img {
     
   }
 
-
 #statsTable {
     display: flex;
     justify-content: center;
     width: 80%;
     margin: auto;
     border-collapse: collapse;
+}
 
+th::after, th::before {
     
+    content: "  --  ";
+}
+th{
+    font-family:'Bona Nova', serif;
+    text-transform: uppercase;
 }
 
 td  {
@@ -45,6 +57,7 @@ td  {
     font-size: 15px;
     padding-left: 5px;
     padding-right: 5px;
+    font-family: Helvetica, sans-serif;
     
 }
 #teamPhoto {
